[package]
name = "image_manip"
version = "1.2.2"
authors = ["igorfs10 <igorfs10@gmail.com>"]
edition = "2018"
license = "gpl-v3"

[dependencies]
image = "0.23.14"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
rayon = "1.5.1"
blake3 = "1.0.0"
console = "0.14.1"
chrono = "0.4.19"
fltk = { version = "1.1.10", features = ["fltk-bundled"] }
fltk-theme = "0.1.8"

[build-dependencies]
fl2rust = "0.4.6"

[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
