[package]
name = "image_manip"
version = "1.2.2"
authors = ["igorfs10 <igorfs10@gmail.com>"]
edition = "2021"
license = "gpl-v3"

[dependencies]
image = "0.24.4"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
rayon = "1.5.3"
blake3 = "1.3.1"
console = "0.15.2"
chrono = "0.4.22"
fltk = { version = "1.3.15", features = ["fltk-bundled"] }
fltk-theme = "0.4.2"

[build-dependencies]
fl2rust = "0.4.18"

[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
strip = true
panic = "abort"
debug-assertions = false
