[package]
name = "image_manip"
version = "1.2.2"
authors = ["igorfs10 <igorfs10@gmail.com>"]
edition = "2021"
license = "gpl-v3"

[dependencies]
image = "0.24.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
rayon = "1.6.1"
blake3 = "1.3.3"
console = "0.15.5"
chrono = "0.4.23"


[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
strip = true
panic = "abort"
debug-assertions = false
debug = 0
